--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 
  body {
-   background-image: url(img/login.jpg);
+   /* background-image: url(img/login.jpg); */
+    background-color: white;
 
  }
 
